--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ Temporary Items
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
-!.vscode/launch.json
+# !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
 
